add: alert function on click

--- a/ecommerce-store/src/components/Header/Header.css
+++ b/ecommerce-store/src/components/Header/Header.css
@@ -14,6 +14,15 @@
     margin-top: 12rem;
 }
 
+#alert{
+    position: fixed;
+  bottom: 16px;
+  right: 16px;
+  border-radius: 4px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width: 599px) {
     #shopping-cart{
         margin-left: auto; 
@@ -21,5 +30,16 @@
 
     #product-container{
         max-width: 300px;
+    }
+
+    #alert{
+      
+        bottom: auto;
+        top: 80px;
+        right: 16px;
+        border-radius: 4px;
+        font-size: 12px;
+        padding: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 }
