--- a/ecommerce-store/src/App.css
+++ b/ecommerce-store/src/App.css
@@ -1,4 +1,10 @@
 .custom-container {
-    max-width: 1400px;
+    max-width: 1400px !important;
     margin: 0 auto;
   }
+
+#app-bg{
+    background-color: #eef2f6;
+    min-height: 100vh;
+    display: block;
+}
